[gd_scene load_steps=6 format=3 uid="uid://b7hv6hw0himsl"]

[ext_resource type="Script" path="res://scenes/enemies/GhostEnemy.gd" id="1"]
[ext_resource type="ArrayMesh" uid="uid://cqjsrddn3vpqc" path="res://assets/3D models/GhostEnemy/Ghost.obj" id="2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mhta8"]
resource_name = "Material.001"
cull_mode = 2
albedo_color = Color(0.8, 0.8, 0.8, 1)
metallic = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h6q3r"]
resource_name = "Material.002"
cull_mode = 2
albedo_color = Color(0.001241, 0.001241, 0.001241, 1)
metallic = 0.5

[sub_resource type="CapsuleShape3D" id="3"]
radius = 0.762
height = 1.524

[node name="GhostEnemy" type="CharacterBody3D"]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, 0, 0)
collision_layer = 2
collision_mask = 2
input_ray_pickable = false
script = ExtResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = ExtResource("2")
surface_material_override/0 = SubResource("StandardMaterial3D_mhta8")
surface_material_override/1 = SubResource("StandardMaterial3D_h6q3r")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="GhostArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="GhostArea"]
transform = Transform3D(-1.02, -1.54016e-07, -6.73224e-15, 0, -4.45856e-08, 1.02, -1.54016e-07, 1.02, 4.45856e-08, 0, -0.793967, 0)
shape = SubResource("3")

[node name="stun_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, -1.74846e-07, -1.74846e-07, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, -0.793967, 0)
shape = SubResource("3")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
volume_db = 5.0
unit_size = 5.0
max_distance = 12.0
bus = &"SfxBus"

[node name="SoundTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="GhostArea" to="." method="_on_EnemyArea_area_entered"]
[connection signal="timeout" from="stun_timer" to="." method="_on_stun_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_AudioStreamPlayer3D_finished"]
[connection signal="timeout" from="SoundTimer" to="." method="_on_SoundTimer_timeout"]
